cf/eks-vpc.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'Terraform to CloudFormation: Development Environment with EKS Roles'

Parameters:
  KeyPairName:
    Type: "AWS::EC2::KeyPair::KeyName"
    Default: "aws-kp-2"
    Description: "AWS SSH Key Pair name for EC2 access"

  ClusterName:
    Type: String
    Default: "get-started-eks"

  VpcCidrBlock:
    Type: String
    Default: "10.0.0.0/16"

  GravitonType:
    Type: String
    Default: "c7g.4xlarge"

  X86Type:
    Type: String
    Default: "c6i.4xlarge"

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCidrBlock
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Ref ClusterName

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub "${ClusterName}-igw"

  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Select [ 0, !Cidr [ !Ref VpcCidrBlock, 32, 8 ] ] # 10.0.0.0/24
      AvailabilityZone: !Select [ 0, !GetAZs "" ]
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: "GSE-pub-subnet-1"
        - Key: "kubernetes.io/role/elb"
          Value: "1"
        - Key: !Sub "kubernetes.io/cluster/${ClusterName}"
          Value: "owned"

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Select [ 1, !Cidr [ !Ref VpcCidrBlock, 32, 8 ] ] # 10.0.1.0/24
      AvailabilityZone: !Select [ 1, !GetAZs "" ]
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: "GSE-pub-subnet-2"
        - Key: "kubernetes.io/role/elb"
          Value: "1"
        - Key: !Sub "kubernetes.io/cluster/${ClusterName}"
          Value: "owned"

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Select [ 10, !Cidr [ !Ref VpcCidrBlock, 32, 8 ] ] # 10.0.10.0/24
      AvailabilityZone: !Select [ 0, !GetAZs "" ]
      Tags:
        - Key: Name
          Value: "GSE-priv-subnet-1"
        - Key: "karpenter.sh/discovery"
          Value: !Ref ClusterName
        - Key: "kubernetes.io/role/internal-elb"
          Value: "1"

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Select [ 11, !Cidr [ !Ref VpcCidrBlock, 32, 8 ] ] # 10.0.11.0/24
      AvailabilityZone: !Select [ 1, !GetAZs "" ]
      Tags:
        - Key: Name
          Value: "GSE-priv-subnet-2"
        - Key: "karpenter.sh/discovery"
          Value: !Ref ClusterName
        - Key: "kubernetes.io/role/internal-elb"
          Value: "1"

  NatEip:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  NatGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatEip.AllocationId
      SubnetId: !Ref PublicSubnet1
      Tags:
        - Key: Name
          Value: !Sub "${ClusterName}-nat"

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub "${ClusterName}-public-rt"

  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: VPCGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub "${ClusterName}-private-rt"

  PrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway

  PubSubnet1Assoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable

  PubSubnet2Assoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref PublicRouteTable

  PrivSubnet1Assoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet1
      RouteTableId: !Ref PrivateRouteTable

  PrivSubnet2Assoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet2
      RouteTableId: !Ref PrivateRouteTable

  EKSCreatorRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: GetStartedEKS_Role
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
            Action: sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AdministratorAccess

  EKSCreatorProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      InstanceProfileName: GetStartedEKS_Profile
      Roles:
        - !Ref EKSCreatorRole

  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "eks-host-sg: SSH, VS Code Server, GitLab, Spring"
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp # SSH
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp # VS Code Server (9090)
          FromPort: 9090
          ToPort: 9090
          CidrIp: ${MY_IP}
        - IpProtocol: tcp # Gitlab KAS
          FromPort: 8150
          ToPort: 8150
          CidrIp: !GetAtt VPC.CidrBlock
        - IpProtocol: tcp # Spring Web (8081-8090)
          FromPort: 8081
          ToPort: 8090
          CidrIp: !GetAtt VPC.CidrBlock
        - IpProtocol: tcp # HTTP (80)
          FromPort: 80
          ToPort: 80
          CidrIp: ${MY_IP}
        - IpProtocol: tcp # HTTPS/Gitlab (443)
          FromPort: 443
          ToPort: 443
          CidrIp: ${MY_IP}

  GravitonBox:
    Type: AWS::EC2::Instance
    Properties:
      # SSM을 통해 최신 AL2023 ARM64 AMI 자동 참조
      ImageId: '{{resolve:ssm:/aws/service/ami-amazon-linux-2023/ami/al2023-ami-minimal-kernel-6.1-arm64/latest/image_id}}'
      InstanceType: !Ref GravitonType
      KeyName: !Ref KeyPairName
      SubnetId: !Ref PublicSubnet1 # VPC 템플릿의 서브넷 참조
      SecurityGroupIds:
        - !Ref InstanceSecurityGroup
      IamInstanceProfile: GetStartedEKS_Profile
      BlockDeviceMappings:
        - DeviceName: /dev/xvda
          Ebs:
            VolumeSize: 30
            VolumeType: gp3
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          sudo -u ec2-user -i <<'EC2_USER_SCRIPT'
          curl -fsSL https://code-server.dev/install.sh | sh && sudo systemctl enable --now code-server@ec2-user
          sleep 5
          sed -i 's/127.0.0.1:8080/0.0.0.0:9090/g; s/auth: password/auth: none/g' /home/ec2-user/.config/code-server/config.yaml
          EC2_USER_SCRIPT
          echo 'export PS1="$(uname -m) \$ "' >> /home/ec2-user/.bashrc
          sudo systemctl restart code-server@ec2-user
      Tags:
        - Key: Name
          Value: code-server-graviton

  X86Box:
    Type: AWS::EC2::Instance
    Properties:
      # SSM을 통해 최신 AL2023 x86_64 AMI 자동 참조
      ImageId: '{{resolve:ssm:/aws/service/ami-amazon-linux-2023/ami/al2023-ami-minimal-kernel-6.1-x86_64/latest/image_id}}'
      InstanceType: !Ref X86Type
      KeyName: !Ref KeyPairName
      SubnetId: !Ref PublicSubnet1
      SecurityGroupIds:
        - !Ref InstanceSecurityGroup
      IamInstanceProfile: GetStartedEKS_Profile
      BlockDeviceMappings:
        - DeviceName: /dev/xvda
          Ebs:
            VolumeSize: 30
            VolumeType: gp3
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          sudo -u ec2-user -i <<'EC2_USER_SCRIPT'
          curl -fsSL https://code-server.dev/install.sh | sh && sudo systemctl enable --now code-server@ec2-user
          sleep 5
          sed -i 's/127.0.0.1:8080/0.0.0.0:9090/g; s/auth: password/auth: none/g' /home/ec2-user/.config/code-server/config.yaml
          EC2_USER_SCRIPT
          echo 'export PS1="$(uname -m) \$ "' >> /home/ec2-user/.bashrc
          sudo systemctl restart code-server@ec2-user
      Tags:
        - Key: Name
          Value: code-server-x86

Outputs:
  BastionDNS:
    Description: "배스천 호스트 접속용 퍼블릭 DNS"
    Value: !GetAtt GravitonBox.PublicDnsName
  VSCodeURL:
    Description: "VS Code 서버 접속 URL"
    Value: !Sub "http://${GravitonBox.PublicDnsName}:9090"
